# BrokerSimulator

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  data_source_clickhouse.cpp  data_source_clickhouse.hpp  session_manager.cpp  session_manager.hpp  start.sh  start_manager.sh  start_ui.sh  stop.sh  stop_manager.sh
build_asan/: CMakeCache.txt
config/: settings.json
docs/: API_REFERENCE.md  CONFIGURATION.md  deployment.md
integration-test/: .env.test  jest.config.js  package-lock.json  package.json
integration-test/src/clients/: alpaca-client.ts  alpaca-simulator-client.ts  finnhub-client.ts  finnhub-simulator-client.ts  polygon-client.ts  simulator-client.ts
integration-test/src/tests/: aggregates.test.ts  alpaca-trading.test.ts  dividends.test.ts  financials.test.ts  finnhub-analyst.test.ts  finnhub-candles.test.ts  finnhub-company.test.ts  finnhub-corporate-actions.test.ts  finnhub-financials.test.ts  finnhub-insider.test.ts  finnhub-news.test.ts  finnhub-realtime.test.ts  indicators.test.ts  ipos.test.ts  market-status.test.ts  news.test.ts  open-close.test.ts  quotes.test.ts  sessions.test.ts  setup.ts  short-interest.test.ts  short-volume.test.ts  snapshots.test.ts  splits.test.ts  ticker-events.test.ts  tickers.test.ts  ticks.test.ts  trades.test.ts
integration-test/src/utils/: retry.ts  schema-compare.ts  session-manager.ts
manager-ui/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
manager-ui/src/: App.tsx  index.css  vite-env.d.ts
manager-ui/src/api/: client.ts  config.ts  endpoints.ts  sessions.ts  status.ts
manager-ui/src/components/common/: JsonViewer.tsx  Layout.tsx  SessionStatusBar.tsx  StatusIndicator.tsx
manager-ui/src/components/ui/: badge.tsx  button.tsx
manager-ui/src/lib/: utils.ts
manager-ui/src/pages/: ApiExplorer.tsx  Dashboard.tsx  Sessions.tsx  Settings.tsx  WebSocketMonitor.tsx
manager-ui/src/services/: websocketService.ts
manager-ui/src/stores/: configStore.ts  sessionStore.ts  websocketStore.ts
manager-ui/src/types/: index.ts
privacy/: lights-out.html
requirements/: broker_simulation_requirements.txt  plan1_design_and_architecture.md
scripts/: broker_ctl.sh  postgres_schema.sql  run_simulator.sh
src/: CMakeLists.txt  main.cpp  session_manager.cpp
src/control/: alpaca_controller.cpp  alpaca_controller.hpp  alpaca_format.hpp  control_server.cpp  control_server.hpp  finnhub_controller.cpp  finnhub_controller.hpp  polygon_controller.cpp  polygon_controller.cpp.rej  polygon_controller.hpp
src/core/: account_manager.cpp  account_manager.hpp  checkpoint.hpp  config.hpp  data_source.hpp  data_source_clickhouse.cpp  data_source_clickhouse.hpp  data_source_stub.hpp  event_queue.hpp  matching_engine.cpp  matching_engine.hpp  performance.cpp  performance.hpp  postgres_store.cpp  postgres_store.hpp  rate_limiter.hpp  session_manager.cpp  session_manager.hpp  time_engine.cpp  time_engine.hpp  utils.hpp  wal_logger.hpp
src/perf/: event_queue_bench.cpp
src/ws/: status_ws_controller.cpp  status_ws_controller.hpp  ws_controller.cpp  ws_controller.hpp  ws_server.cpp  ws_server.hpp
tests/: CMakeLists.txt  account_manager_test.cpp  alpaca_format_test.cpp  fee_config_test.cpp  finnhub_news_stream_test.cpp  integration_test.cpp  market_hours_test.cpp  matching_engine_test.cpp  performance_test.cpp  rate_limiter_test.cpp  session_manager_test.cpp  stress_test.cpp  test_placeholder.cpp  time_engine_test.cpp  utils_test.cpp
